@@ -54,7 +54,7 @@ public class BlikiParser extends JFlexParser {
 	public String parseHTML(ParserOutput parserOutput, String raw) throws ParserException {
 		long start = System.currentTimeMillis();
 		String output = null;
-		if (!StringUtils.isBlank(this.isRedirect(raw))) {
+		if (!StringUtils.isBlank(parserOutput.getRedirect())) {
 			// redirects are parsed differently
 			output = this.parseRedirect(parserOutput, raw);
 		} else {
