@@ -1,0 +1,2 @@
+<!-- test redirected category -->
+#REDIRECT [[Category:Test]][[Category:Category1]]
